# zlcython-pip-package

./: PKG-INFO  README.md  a.txt  code.spec  install.spec  package-lock.json  setup.cfg  zlcython.spec
src/zlcython/: __init__.py  __main__.py  code.py  code.zlcy  errentozh.py  idle.py  ifmaker.py  install.py  install.zlcy  keywords.json  liblist.json  nple.py  out.py  retrandic.json  runzlcython.py  tes1__.py  test1.py  test1.zlcy  test_shell.py  tran.py  trandic.json  tranlist.json
src/zlcython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
