[metadata]
name = zlcython
version = 2.2.09
author = zlc1001
author_email = github.io@qq.com
description = zlcython
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zlc1003/zlcython/
project_urls = 
	Bug Tracker = https://github.com/zlc1003/zlcython/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

